socials click issue on mobile

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: 100vh;
   color: white;
-  z-index: 2;
+  z-index: 1;
   position: relative;
   pointer-events: none;
 }
